# agentflare

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  NOTICE  README.md  SECURITY.md  install.ps1  install.sh  mise.local.toml  opencode.json  package.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.codex-plugin/hooks/: hooks.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-merge.yml  ci.yml  cla.yml  crates-io-publish.yml  npm-publish.yml  opencode.yml  ppa-publish.yml  pr-title.yml  release-plz.yml  release.yml  security-check.yml  winget.yml
bucket/: agentflare.json  leanstack.json
docs/: api-sdk-reference.md  architecture-system-design.md  deployment-and-operations.md  product-overview.md  security.md  testing.md
scripts/: cleanup-branches.sh  discussions.sh  loc-gate.sh  pm-fixtures.sh
site/: README.md
src/: agent_detect.rs  agent_install.rs  agent_launch.rs  agent_registry.rs  agents.rs  alias.rs  artifacts.rs  asset_store.rs  auth.rs  auth_db.rs  auth_runner.rs  banner.rs  channels.rs  claims.rs  coaching.rs  components.rs  config.rs  cost.rs  db.rs  engram_install.rs  errors.rs  gateway_integrations.rs  git.rs  hook.rs  hook_redirect.rs  init.rs  jsonc.rs  main.rs  mcp_prompts.rs  mcp_server.rs  mise_install.rs  optimize.rs  paths.rs  pricing.rs  review.rs  rollup.rs  rule-text.js  rule_text.rs  shim_install.rs  skill_detect.rs  (+7 more)
tests/: caveman_cli.rs
(+227 files in other folders)
