[package]
name = "leanstack"
version = "1.0.0"
edition = "2021"
description = "lean-ctx + engram powered token-saving stack. Zero fluff, zero runtime deps."
license = "MIT"
repository = "https://github.com/getappz/leanstack"

[[bin]]
name = "leanstack"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
