[package]
name = "agentflare"
version = "1.0.2"
edition = "2021"
description = "Optimize AI CLI agents for cost and performance."
license = "MIT"
repository = "https://github.com/getappz/agentflare"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/agentflare-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"

[[bin]]
name = "agentflare"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
rmcp = { version = "1.8.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
